--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "micro": "^10.0.1",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^14.1.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
