--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.3",
     "axios": "^1.5.1",
     "micro": "^10.0.1",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
+    "next-auth": "^4.24.3",
+    "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.1.0",
