--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.3",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "micro": "^10.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
