dodanie animowanych grafik json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "framer-motion": "^10.16.5",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "micro": "^10.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
