dodanie informacji o autorze i opis projektu

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "festival-page",
   "version": "0.1.0",
+  "description": "Praca inżynierska - strona festiwalu muzycznego z sklepem internetowym",
+  "author": "Mikołaj Gawron gawrmiko@gmail.com",
   "private": true,
   "scripts": {
     "dev": "next dev",
