--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.1.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "eslint": "^8",
