akt next.js do wersji 14.0.3 i next-auth do 4.24.5

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "micro": "^10.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
-    "next": "13.5.6",
-    "next-auth": "^4.24.3",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
