--- a/package.json
+++ b/package.json
@@ -8,28 +8,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.0.3",
-    "axios": "^1.5.1",
-    "framer-motion": "^10.16.5",
+    "@auth/mongodb-adapter": "^3.11.1",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "lodash": "^4.17.21",
-    "lottie-web": "^5.12.2",
+    "lottie-web": "^5.13.0",
     "micro": "^10.0.1",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
-    "next": "^14.0.3",
-    "next-auth": "^4.24.5",
-    "next-reveal": "^1.0.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "stripe": "^14.1.0",
-    "styled-components": "^6.1.0",
-    "typescript": "^5.3.2"
+    "mongodb": "^6.10.0",
+    "mongoose": "^9.0.1",
+    "next": "16.0.7",
+    "next-auth": "^4.24.13",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "stripe": "^20.0.0",
+    "styled-components": "^6.1.19",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.4"
   }
 }
