feat(env): change google client keys

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ STRIPE_SK=
 STRIPE_WEBHOOK_SECRET=
 PUBLIC_URL=
 NEXTAUTH_URL=
-GOOGLE_PAGE_ID=
-GOOGLE_PAGE_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 NEXTAUTH_SECRET=
 MAILGUN_API_KEY=
 MAILGUN_LIST_ADDRESS=
